--- a/src/pages/VideoPlayerPage/video-player-page.module.scss
+++ b/src/pages/VideoPlayerPage/video-player-page.module.scss
@@ -1,3 +1,5 @@
 .video-player-page {
-
+  display: flex;
+  padding-left: 5rem;
+  padding-right: 7rem;
 }
